--- a/g2b/.classpath
+++ b/g2b/.classpath
@@ -13,23 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/gson-2.8.6.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/KOMORAN-36f59cf.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/commons-cli-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/commons-codec-1.13.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpclient5-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpclient5-cache-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpclient5-fluent-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpclient5-testing-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpclient5-win-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpcore5-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpcore5-h2-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpcore5-reactive-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/httpcore5-testing-5.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/jna-5.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/jna-platform-5.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/reactive-streams-1.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/rxjava-2.2.8.jar"/>
-	<classpathentry kind="lib" path="C:/eGovFrame-3.8.0/bin/httpcomponents-client-5.0.1/lib/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ehdru/git/G2B/g2b/WebContent/WEB-INF/lib/gson-2.8.6.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
